samples/wig/should_pass/var_simple.wig
variableStep chrom=chr1
1 10
2 5
3 10
10 0
