samples/wig/should_fail/null_span.wig
variableStep chrom=chr1 span=0
1 10
2 5
3 10
10 0
